<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back"
                android:textColor="@color/black"
                app:backgroundTint="@color/white"
                app:iconTint="#00FFFFFF" />

            <TextView
                android:layout_width="286dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/sortuj_utwory"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="677dp"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/button2"
                    android:layout_width="375dp"
                    android:layout_height="37dp"
                    android:text="@string/wg_nazwy"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/button"
                    android:layout_width="375dp"
                    android:layout_height="37dp"
                    android:text="@string/wg_czasu_dodania"
                    android:textColor="#000000" />
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>