<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="175dp"
        tools:layout_editor_absoluteY="492dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_width="57dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Back"
                android:textSize="36sp"
                android:textColor="@color/black"
                app:backgroundTint="@color/white"
                style="?android:attr/buttonBarStyle"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="304dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/usu"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="599dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/DText"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/AnulujButton"
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:layout_weight="1"
                android:text="@string/anuluj"
                android:textColor="@color/black"
                app:backgroundTint="@color/white"
                style="?android:attr/buttonBarStyle"/>
            <Button
                android:id="@+id/UsunButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/usu"
                android:textColor="@color/black"
                app:backgroundTint="@color/white"
                style="?android:attr/buttonBarStyle"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>