<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:text="@string/back"
                android:textColor="@color/black"
                app:backgroundTint="@null" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/Playlist" />

            <Button
                android:id="@+id/button2"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:text="@string/plus"
                android:textColor="@color/black"
                app:backgroundTint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="0.8">

            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1" />


        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:layout_weight="3">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PlayerText"
                    android:layout_weight="2"/>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/Previous"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        app:srcCompat="@android:drawable/ic_media_previous"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        app:backgroundTint="@color/white"
                        />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/Play"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        app:srcCompat="@android:drawable/ic_media_play"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        app:backgroundTint="@color/white"/>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/Next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        app:srcCompat="@android:drawable/ic_media_next"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        app:backgroundTint="@color/white"/>
            </LinearLayout>

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>